--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "lodash": "^4.17.11",
     "native-base": "^2.11.0",
     "react": "16.6.3",
     "react-native": "0.58.3",
@@ -14,7 +16,11 @@
     "react-native-gesture-handler": "^1.0.15",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-vector-icons": "^6.2.0",
-    "react-navigation": "^3.1.3"
+    "react-navigation": "^3.1.3",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
