--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.6.3",
     "react-native": "0.58.3",
     "react-native-elements": "^1.0.0",
+    "react-native-fbsdk": "^0.8.0",
     "react-native-gesture-handler": "^1.0.15",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-vector-icons": "^6.2.0",
