apk production changes

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,10 @@
 # Project-wide Gradle settings.
 
+MYAPP_RELEASE_STORE_FILE=lawyer-forum.keystore
+MYAPP_RELEASE_KEY_ALIAS=lawyer-forum
+MYAPP_RELEASE_STORE_PASSWORD=pass123
+MYAPP_RELEASE_KEY_PASSWORD=pass123
+
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
